--- a/website/templates/registration/login.html
+++ b/website/templates/registration/login.html
@@ -20,7 +20,7 @@
 					</div>
 					<div class="row">
 						<div class="large-12 columns">
-							<a href="{% url "signup_signup" %}">Não tem conta? Cadastre-se</a>
+							<a class="dark-bg" href="{% url "signup_signup" %}">Não tem conta? Cadastre-se</a>
 						</div>
 					</div>
 				</fieldset>
