--- a/website/templates/website/templatetags/render_sponsors.html
+++ b/website/templates/website/templatetags/render_sponsors.html
@@ -3,7 +3,7 @@
   <div class="sponsors">
     <div class="row">
       <div class="large-12 columns">
-        <h2 class="text-center">Patrocinadores <small><a href="#">Quer ser um patrocinador?</a></small></h2>
+        <h2 class="text-center blue-bg">Patrocinadores <small><a class="dark-bg" href="/contato">Quer ser um patrocinador?</a></small></h2>
         <div class="row grid-logo">
           <ul class="small-block-grid-1 ultrabig">
             {% for sponsor in adamantium_sponsors %}
@@ -29,7 +29,7 @@
   <div class="partners">
     <div class="row">
       <div class="large-12 columns">
-        <h2 class="text-center">Apoios</h2>
+        <h2 class="text-center blue-bg">Apoios</h2>
         <div class="row grid-logo">
           <ul class="small-block-grid-3 medium-block-grid-5 large-block-grid-6 normal">
             {% for partner in partners %}
