cria tag pra exibir mapa estático nos templates

--- a/website/templates/website/event_details_include.html
+++ b/website/templates/website/event_details_include.html
@@ -1,3 +1,5 @@
+{% load semcomp %}
+
 <article class="row panel">
 	<section class="medium-7 columns">
 		<h1>{{event.name}}<br>
@@ -8,8 +10,8 @@
 	</section>
 	{% if event.place %}
 		<section class="medium-5 columns">
-			<h2>Local: <small>lugar e tal pode ser meio grande o texto aqui</small></h2>
-			<p>mostrar mapa aqui</p>
+			<h2>Local: <small>{{event.place.name}}</small></h2>
+			{% render_place event.place %}
 		</section>
 	{% endif %}
 </article>
