--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -1,3 +1,5 @@
+{% load semcomp %}
+
 <article class="row panel">
 	<section class="medium-7 columns">
 		<h1>{{course.title}}<br>
@@ -15,8 +17,8 @@
 		<h2>Pré-requisitos</h2>
 		{{course.requirements|linebreaks}}
 		{% if course.place %}
-			<h2>Local: <small>lugar e tal pode ser meio grande o texto aqui</small></h2>
-			<p>mostrar mapa aqui</p>
+			<h2>Local: <small>{{{course.place.name}}</small></h2>
+			{% render_place course.place %}
 		{% endif %}
 	</section>
 	{% if course.speaker %}
