Texto justificado nos detalhes dos eventos da programação.

--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -1,7 +1,7 @@
-{% load semcomp %}
+{% load semcomp thumbnail %}
+
 {% spaceless %}
-{% load thumbnail %}
-<article class="row panel courseinfo">
+<article class="row panel justify-text">
 	<section class="medium-7 columns">
 		<div class="row">
 			<div class="medium-3 columns courselogo">
