--- a/website/templates/website/lecture_details_include.html
+++ b/website/templates/website/lecture_details_include.html
@@ -1,6 +1,6 @@
 {% load semcomp %}
 
-<article class="row panel">
+<article class="row panel justify-text">
 	<section class="medium-7 columns">
 		<h1>{{event.lecture.title}}<br>
 			<small>{{event.start_date|date:"d/m/Y (l)"}}<br>
