Texto justificado nos detalhes dos eventos da programação.

--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -1,7 +1,8 @@
-{% load semcomp %}
+{% load semcomp thumbnail %}
+
 {% spaceless %}
 {% load thumbnail %}
-<article class="row panel courseinfo">
+<article class="row panel justify-text courseinfo">
 	<section class="
 	{% if course.speaker %} medium-7 {% else %} medium-12 {% endif %}
 	columns">
