--- a/management/templates/management/places.html
+++ b/management/templates/management/places.html
@@ -15,7 +15,6 @@
         <tr>
           <th>Nome</th>
           <th>Mapa estático</th>
-          <th>Apagar</th>
           <th>Editar</th>
         </tr>
       </thead>
@@ -23,7 +22,7 @@
         {% for place in places %}
           <tr>
             <td>{{place.name}}</td>
-            <td>
+            <td class="static-map-container">
               {% if place.static_map %}
                 <a href="#" data-reveal-id="static-map-modal-{{place.pk}}">
                   <div class="crop-static-map">
@@ -34,7 +33,6 @@
                 <span class="alert-box alert">Sem mapa estático, editar para criar</span>
               {% endif %}
             </td>
-            <td><a title="Apagar" class="button alert" href="{% url "management_places_delete" place.pk %}"><i class="fa fa-eraser"></i> Apagar</a></td>
             <td><a title="Editar" class="button" href="{% url "management_places_edit" place.pk %}"><i class="fa fa-edit"></i> Editar</a></td>
           </tr>
         {% endfor %}
