--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -344,10 +344,17 @@ a .schedule-event:hover {
 }
 
 .minicursos {
-    .courselogo a img{
-        display:block;
-        height:10rem;
-        max-height: 10rem;
+    .courselogo{
+        padding: 5px;
+        text-align: center;
+        a img{
+            height:100px;
+            max-height:100px;
+            @media #{$medium-up}{
+                height:180px;
+                max-height:180px;
+            }
+        }
     }
     .coursetitle {
         text-align: center;
