Permite valores nulos para colunas médias e grandes.

--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -1,6 +1,6 @@
 {% load semcomp %}
 {% spaceless %}
-{% load thumbnail %}n
+{% load thumbnail %}
 <article class="row panel courseinfo">
 	<section class="medium-7 columns">
 		<div class="row">
