Cor de mais titulos alterados e alguns adicionados

--- a/management/templates/management/places.html
+++ b/management/templates/management/places.html
@@ -2,7 +2,7 @@
 
 {% block user_content %}
 <div class="row">
-  <h1>Locais</h1>
+  <h1 class="blue-bg">Locais</h1>
   <p>Aqui você pode editar locais onde acontecem as coisas da Semcomp, como
   laboratórios, auditórios, E1, biblioteca etc.</p>
   <p><strong>Nota:</strong> É necessário criar um local aqui antes de usá-lo
