--- a/management/templates/management/users.html
+++ b/management/templates/management/users.html
@@ -2,6 +2,7 @@
 
 {% block user_content %}
 <div class="row">
+    <h1 class="blue-bg">Usuários</h1>
 	<div class="large-6 columns">
 		<p>Alguma coisa aqui</p>
 	</div>
