--- a/management/templates/management/companies.html
+++ b/management/templates/management/companies.html
@@ -2,6 +2,7 @@
 
 {% block user_content %}
 <div class="row">
+	<h1 class="blue-bg">Empresas</h1>
 	<div class="large-6 columns">
 		<p>Quantidade de apoios: {{partnerships.count}}</p>
 		<p>Quantidade de patrocínios: {{sponsorships.count}}</p>
