--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -2,6 +2,7 @@
 
 {% block user_content %}
   <div class="row">
+  <h1 class="blue-bg">Minicursos</h1>
     <div class="large-12 columns">
       <table>
         <thead>
