--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -4,7 +4,7 @@
 
 {% block user_content %}
 <div class="row">
-	<h1>Eventos</h1>
+	<h1 class="blue-bg">Eventos</h1>
 	<div class="large-6 columns">
 		<a class="button" href="{% url "management_events_add" %}">Adicionar evento</a>
 	</div>
