--- a/website/templates/aldryn_blog/post_list.html
+++ b/website/templates/aldryn_blog/post_list.html
@@ -22,7 +22,7 @@
 
 {% block content_blog %}
 <div class="blog-list">
-    {% block blog_title %}<h2>
+    {% block blog_title %}<h2 class="blue-bg">
         {% if author %}{% trans "Entries by" %} {{ author.get_full_name }}{% elif archive_date %}
         {% trans "Blog Archive" %} &ndash; {% if day %}{{ archive_date|date:'d' }}. {% endif %}{% if month %}{{ archive_date|date:'F' }} {% endif %}{{ year }}{% elif tagged_entries %}
         {% trans "Blog Tag" %} &ndash; {{ tagged_entries|capfirst }}{% else %}
