--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -4,6 +4,7 @@
   <div class="row">
   <h1 class="blue-bg">Minicursos</h1>
     <div class="large-12 columns">
+      <div class="management-table-scroll">
       <table>
         <thead>
           <tr>
@@ -34,6 +35,7 @@
           {% endfor %}
         </tbody>
       </table>
+      </div>
     </div>
   </div>
   <div class="row">
