--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -40,7 +40,7 @@
 		<section class="medium-5 columns">
 			<h3>{{speaker.name}}<br>
 				<small>{{speaker.occupation}}</small></h3>
-			{% if speaker.photo %}<div class="text-center"><img src={{speaker.photo.url}}></div>{% endif %}
+			{% if speaker.photo %}<div class="text-center"><img src={% thumbnail speaker.photo 370x0 %}></div>{% endif %}
 			{{speaker.bio|linebreaks}}
 		</section>
 	{% endwith %}
