Adicionado um botão para voltar para a programação na pagina de detalhes do evento.

--- a/website/templates/website/event_details.html
+++ b/website/templates/website/event_details.html
@@ -1,5 +1,8 @@
 {% extends "website/base.html" %}
 
 {% block base_content %}
+    <div class="row">
+        <a class="button" href="/programacao">Voltar para Programação</a>
+    </div>
 	{% include template_name %}
 {% endblock %}
