--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -402,3 +402,13 @@ a.dark-bg{
 	}
 }
 
+.payment_status{
+    dt{
+        font-style:bold;
+        font-size:1.2rem;
+        margin: 0.5rem 0 0.5rem 0.2rem;
+    }
+    dd, dt{
+        color:black;
+    }
+}
