Tela de aprovação de comprovante.

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -7221,13 +7221,15 @@ a.dark-bg:hover {
     overflow-x: auto;
   }
 }
+dt {
+  font-weight: bold;
+}
+
 .payment_status dt {
-  font-style: bold;
-  font-size: 1.2rem;
   margin: 0.5rem 0 0.5rem 0.2rem;
 }
 .payment_status dd, .payment_status dt {
-  color: black;
+  color: #333;
 }
 
 .payment_buttons button {
