--- a/management/templates/management/users.html
+++ b/management/templates/management/users.html
@@ -47,7 +47,7 @@
 						<td>{{ user.full_name }}</td>
 						<td>{{ user.email }}</td>
 						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
-						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Validar </a></td>
+						<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
 					</tr>
 				{% endfor %}
 			</tbody>
@@ -72,7 +72,7 @@
 						<td>{{ user.full_name }}</td>
 						<td>{{ user.email }}</td>
 						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Editar </a></td>
-						<td><a href="{% url "management_users_edit" user.pk %}" class="small expand button" >Validar </a></td>
+						<td><a href="{% url "management_users_validate" user.pk %}" class="small expand button" >Validar </a></td>
 					</tr>
 				{% endfor %}
 			</tbody>
