--- a/management/templates/management/users_change.html
+++ b/management/templates/management/users_change.html
@@ -2,9 +2,7 @@
 
 {% block user_content %}
 {% spaceless %}
-<form 
-action="{% url "management_users_edit" user.pk %}" 
-method="post" enctype="multipart/form-data">
+<form action="{% url "management_users_edit" user.pk %}">
 {% csrf_token %}
 <fieldset>
 	<legend>Informações do Usuário</legend>
