Mostra valor do pacote na hora de enviar comprovante.

--- a/account/templates/account/payment_send.html
+++ b/account/templates/account/payment_send.html
@@ -31,10 +31,10 @@
 		</div>
 		<div class="row payment_buttons">
 			<div class="medium-6 columns">
-				<button class="expand button success round" name="com_coffee">Inscrição COM Coffee Break</button>
+				<button class="expand button success round" name="com_coffee">Inscrição COM Coffee Break ( R$ 40,00 )</button>
 			</div>
 			<div class="medium-6 columns">
-				<button class="expand button alert round" name="sem_coffee" >Inscrição SEM Coffee Break</button>
+				<button class="expand button alert round" name="sem_coffee" >Inscrição SEM Coffee Break ( R$ 20,00 )</button>
 			</div>
 		</div>
 	</fieldset>
