--- a/management/templates/management/users_validate.html
+++ b/management/templates/management/users_validate.html
@@ -4,11 +4,14 @@
 {% block user_content %}
 {% spaceless %}
 <form 
-action="{% url "management_users_edit" user.pk %}" 
+action="{% url "management_users_validate" user.pk %}" 
 method="post" enctype="multipart/form-data">
 {% csrf_token %}
 <fieldset>
 	<legend>Inscrição</legend>
+	{% if inscricao_form.non_field_errors %}
+		{{ inscricao_form.non_field_errors.as_ul }}
+	{% endif %}
 	<fieldset>
 		<legend>Usuário</legend>
 		<div class="row">
