--- a/website/templates/website/templatetags/render_sponsors_detailed.html
+++ b/website/templates/website/templatetags/render_sponsors_detailed.html
@@ -18,7 +18,9 @@
 	<div class="medium-4 {% cycle "" "medium-pull-8" %} columns">
 		<div class="panel" data-equalizer-watch >
 		<div class="company-logo">
+			<div class="y-center">
               <a href="{{sponsor.url}}"><img src="{% thumbnail sponsor.logo 261x0 %}" alt="{{sponsor.name}}" title="{{sponsor.name}}"></a>
+            </div>
 	      </div>
 	      </div>
 	</div>
@@ -43,7 +45,9 @@
 	<div class="medium-4 {% cycle "" "medium-pull-8" %} columns">
 		<div class="panel" data-equalizer-watch >
 		<div class="company-logo">
+			<div class="y-center">
               <a href="{{partner.url}}"><img src="{% thumbnail partner.logo 261x0 %}" alt="{{partner.name}}" title="{{partner.name}}"></a>
+            </div>
 	      </div>
 	      </div>
 	</div>
