--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -46,6 +46,11 @@
 						<i class="fa fa-fw fa-building-o"></i> {% trans "Empresas" %}
 					</a>
 				</li>
+				<li {% if active_config %}class="active"{% endif %}>
+					<a href="{% url "management_config" %}">
+						<i class="fa fa-fw fa-cog"></i> {% trans "Configurações" %}
+					</a>
+				</li>
 			</ul>
 			</div>
 		</div>
