--- a/management/templates/management/payment_notification.html
+++ b/management/templates/management/payment_notification.html
@@ -16,7 +16,7 @@
         {% endif %}
         {% if comentario %}
             <strong>Comentário:</strong>
-            <p>{{comentario}}</p>
+            <p>{{comentario|linebreaks}}</p>
         {% endif %}
         </div>
         <div style='padding: 15px;'>
