--- a/website/templates/website/templatetags/render_schedule.html
+++ b/website/templates/website/templatetags/render_schedule.html
@@ -58,4 +58,7 @@
 <div id="modal-reveal" class="reveal-modal" data-reveal>
 	<a class="close-reveal-modal">&#215;</a>
 </div>
+<div id="course-modal" class="reveal-modal" data-reveal>
+	<a class="close-reveal-modal">&#215;</a>
+</div>
 {% endif %}
