--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -5,5 +5,16 @@
 		<div class="large-6 columns">
 			{% include "account/render_payment_status.html" with inscricao=inscricao only %}
 		</div>
+		<div class="large-6 columns">
+			<div class="panel">
+				<h2>Minicursos</h2>
+				{% if course_registration_open %}
+				{% else %}
+					<p>As inscrições para minicursos vão abrir dia
+					<strong>{{course_registration_date|date:"SHORT_DATE_FORMAT"}}</strong> as
+					<strong>{{course_registration_date|time:"TIME_FORMAT"}}</strong></p>
+				{% endif %}
+			</div>
+		</div>
 	</div>
 {% endblock %}
