--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -401,6 +401,13 @@ a.dark-bg{
 		overflow-x: auto;
 	}
 }
+
+.management-table-scroll {
+	table {
+		width: 100%;
+	}
+}
+
 dt{
     font-weight:bold;
 }
