--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -74,7 +74,7 @@
 
             <div class="medium-4 columns">
               <h1>Dúvidas?</h1>
-              <a class="button expand" href="/contato">Contato & FAQ</a>
+              <a class="button expand" href="{% page_url 'contato' %}">Contato & FAQ</a>
               <ul class="semcomp-contatos">
                 <li >Telefone 1: (16) 3373-9703</li>
                 <li>Telefone 2: (16) 3373-9686</li>
