--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -6806,7 +6806,7 @@ body {
 }
 
 .menu-topo {
-  background-image: url('/static/img/header.png?1400183898');
+  background-image: url('/static/img/header.png?1405619194');
   background-repeat: no-repeat;
   background-position: center top;
   text-transform: uppercase;
@@ -6835,7 +6835,7 @@ main {
 
 .hero {
   padding-top: 10px;
-  background: url('/static/img/hero-background.jpg?1405275795') no-repeat center center;
+  background: url('/static/img/hero-background.jpg?1405619194') no-repeat center center;
   background-size: cover;
 }
 @media only screen and (min-width: 64.063em) {
@@ -7221,6 +7221,10 @@ a.dark-bg:hover {
     overflow-x: auto;
   }
 }
+.management-table-scroll table {
+  width: 100%;
+}
+
 dt {
   font-weight: bold;
 }
