Avisa se não tiver processos seletivos cadastrados

--- a/website/templates/website/templatetags/render_recruitment_processes.html
+++ b/website/templates/website/templatetags/render_recruitment_processes.html
@@ -26,6 +26,10 @@
 					</div>
 				</div>
 			{% endfor %}
+		{% empty %}
+			<div class="text-center">
+				<h2 class="blue-bg">Nenhum processo seletivo cadastrado... Volte mais tarde :-)</h2>
+			</div>
 		{% endfor %}
 	</div>
 </div>
