--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -51,6 +51,11 @@
 						<i class="fa fa-fw fa-briefcase"></i> {% trans "Processos seletivos" %}
 					</a>
 				</li>
+				<li {% if active_business_lectures %}class="active"{% endif %}>
+					<a href="{% url "management_business_lectures" %}">
+						<i class="fa fa-fw fa-suitcase"></i> {% trans "Palestras empresariais" %}
+					</a>
+				</li>
 				{% if user.is_admin %}
 				<li {% if active_config %}class="active"{% endif %}>
 					<a href="{% url "management_config" %}">
