--- a/website/static/sass/_localsettings.scss
+++ b/website/static/sass/_localsettings.scss
@@ -10,3 +10,5 @@ $menu-link-color: #333;
 $side-nav-font-weight: bold;
 $side-nav-link-color: $menu-link-color;
 $side-nav-link-color-active: $menu-link-color-active;
+
+$table-even-row-bg: #eee;
