--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -4681,7 +4681,7 @@ table tr td {
   text-align: left;
 }
 table tr.even, table tr.alt, table tr:nth-of-type(even) {
-  background: #f9f9f9;
+  background: #eeeeee;
 }
 table thead tr th,
 table tfoot tr th,
