--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -7239,3 +7239,10 @@ dt {
 .payment_buttons button {
   margin: 1rem auto;
 }
+
+img.b-lecture {
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 100px;
+  display: block;
+}
